adding few changes

--- a/src/recipe.module.css
+++ b/src/recipe.module.css
@@ -6,6 +6,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    /* background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%); */
+    /* background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%); */
     background-image: linear-gradient(to right, #e4afcb 0%, #b8cbb8 0%, #b8cbb8 0%, #e2c58b 30%, #c2ce9c 64%, #7edbdc 100%);
     align-items: center;
     min-width: 40%;
